feat/sidebar-ui-ready

--- a/components.json
+++ b/components.json
@@ -19,6 +19,7 @@
     "pages": "@/pages",
     "routes": "@/routes",
     "services": "@/services",
-    "features": "@/features"
+    "features": "@/features",
+    "constants": "@/constants"
   }
 }
